src/objects/Case_Issue__c.object
<CustomObject>
    <description>This object is used to track the individual charges and credits on each case.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Financial_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalon Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonBay.com (Parent Company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonCommunities.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community/Lease Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidy Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Recovery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <formula>CASE( Charge_Type__c, 
	&quot;Alarm Fees/422200&quot;, &quot;ALM&quot;,
	&quot;Application Fee/420400&quot;, &quot;APP&quot;,
	&quot;CAM Charges/430300&quot;, &quot;CAM&quot;,
	&quot;CAM Reconcilliation/430300&quot;, &quot;CMR&quot;,
	&quot;Cert of Occ./206000&quot;, &quot;CTO&quot;,
	&quot;Clubhouse/Com Room/420600&quot;, &quot;CLB&quot;,
	&quot;Commercial Rent/430100&quot;, &quot;RNC&quot;,
	&quot;Common Area Ameni/420200&quot;, &quot;CAA&quot;,
	&quot;Corporate Premium/470100&quot;, &quot;CRP&quot;,
	&quot;Credit Card Fee/422300&quot;, &quot;CCF&quot;,
	&quot;Customer Srv Disc/545250&quot;, &quot;CSD&quot;,
	&quot;Damage Receipts/561200&quot;, &quot;DMG&quot;,
	&quot;Early Term Rent/420900&quot;, &quot;TMC&quot;,
	&quot;Guest Apartment/420700&quot;, &quot;GST&quot;,
	&quot;Insurance Reconciliation/430300&quot;, &quot;INR&quot;,
	&quot;Insurance/430300&quot;, &quot;INS&quot;,
	&quot;Ista conversion/207000&quot;, &quot;IST&quot;,
	&quot;Late Charges/420300&quot;, &quot;LAT&quot;,
	&quot;Legal Costs/Evicti/601600&quot;, &quot;LEG&quot;,
	&quot;Legal Notices/601600&quot;, &quot;LEN&quot;,
	&quot;Legal Prep Fees/601600&quot;, &quot;LEA&quot;,
	&quot;Lock/Key Charge/570800&quot;, &quot;LKY&quot;,
	&quot;Minol Final  Bill/530500&quot;, &quot;MFB&quot;,
	&quot;MTM/421400&quot;, &quot;MTM&quot;,
	&quot;Non Res Parking/425500&quot;, &quot;NRP&quot;,
	&quot;Other Qualified Income/424900&quot;, &quot;OQI&quot;,
	&quot;Other Utilities/539000&quot;, &quot;UTO&quot;,
	&quot;Parking Rent/421300/430400&quot;, &quot;PRK&quot;,
	&quot;Parking Sales Tax/790400/205900&quot;, &quot;PTX&quot;,
	&quot;ParkingRent/421300/430400&quot;, &quot;PRK&quot;,
	&quot;ParkingTax/790400/205900&quot;, &quot;PTX&quot;,
	&quot;Pet Fee Non Refund/220400&quot;, &quot;PTN&quot;,
	&quot;Pet Rent/420100&quot;, &quot;PET&quot;,
	&quot;RE Tax Passthrough/430200&quot;, &quot;RTX&quot;,
	&quot;RE Tax Reconciliation/430200&quot;, &quot;RTR&quot;,
	&quot;Rent Concession/400600&quot;, &quot;CON&quot;,
	&quot;Rent Receivable/400100&quot;, &quot;RNT&quot;,
	&quot;Reserv Charge/421000&quot;, &quot;RSV&quot;,
	&quot;ResReferral Credit/545500&quot;, &quot;RRC&quot;,
	&quot;Returned Check Charge/420500&quot;, &quot;NSF&quot;,
	&quot;Sewer Charge/530500&quot;, &quot;SWR&quot;,
	&quot;Short Term Prem/421400&quot;, &quot;STP&quot;,
	&quot;Shuttle  Fee/545700&quot;, &quot;SHT&quot;,
	&quot;Storage Rent/421200&quot;, &quot;STC&quot;,
	&quot;Tenant Amortization Reim/158200&quot;, &quot;TAR&quot;,
	&quot;Transfer Fees/420800&quot;, &quot;TRF&quot;,
	&quot;Trash Collections/421700&quot;, &quot;TRS&quot;,
	&quot;Upgrade Charge/429900&quot;, &quot;UPG&quot;,
	&quot;Waive Late Fee/400400&quot;, &quot;WVL&quot;,
	&quot;Waive Misc/400400&quot;, &quot;WVM&quot;,
	&quot;Waive Transf 1day/400400&quot;, &quot;WVT&quot;,
	&quot;Water Submet Reim./530500&quot;, &quot;WSM&quot;,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accelerated Rent/400500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alarm Fees/422200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee/420400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Charges/430300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Reconcilliation/430300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert of Occ./206000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubhouse/Com Room/420600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Rent/430100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Area Ameni/420200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Premium/470100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Fee/422300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Srv Disc/545250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Receipts/561200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Term Rent/420900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Apartment/420700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Reconciliation/430300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance/430300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ista conversion/207000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Charges/420300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Costs/Evicti/601600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Notices/601600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Prep Fees/601600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock/Key Charge/570800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minol Final  Bill/530500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTM/421400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Res Parking/425500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Qualified Income/424900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Utilities/539000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Rent/421300/430400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Sales Tax/790400/205900</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrected_Charge_Amount__c</fullName>
        <label>Corrected Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corrected_Credit_Amount__c</fullName>
        <label>Corrected Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Customer Group logging this Case Issue</description>
        <label>Customer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Issues</relationshipLabel>
        <relationshipName>Case_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Deposited__c</fullName>
        <label>Date Deposited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken_off_Market__c</fullName>
        <label>Date Taken off Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_off_Market_1__c</fullName>
        <formula>Cancel_Date__c  -  Date_Taken_off_Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days off Market (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_off_Market_2__c</fullName>
        <formula>IF( Days_off_Market_1__c &lt;= 10, Days_off_Market_1__c  , 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days off Market (2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <controllingField>Subcategory__c</controllingField>
            <picklistValues>
                <fullName>Error Messages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innacurate Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Features</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Move_in_Date__c</fullName>
        <label>Expected Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Level__c</fullName>
        <description>Feedback level on this particular issue</description>
        <label>Feedback Level</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <formula>CASE(  Charge_Type__c  , 
&quot;Accelerated Rent&quot;,&quot;400500&quot;,
&quot;Alarm Fees&quot;,&quot;422200&quot;,
&quot;Application Fees&quot;,&quot;420400&quot;,
&quot;Cable Charge&quot;,&quot;421800&quot;,
&quot;Cable TV&quot;,&quot;530900&quot;,
&quot;Cam Charges&quot;,&quot;430300&quot;,
&quot;Cam Reconciliation&quot;,&quot;430300&quot;,
&quot;Certificate of OCC&quot;,&quot;206000&quot;,
&quot;Commercial Rent&quot;,&quot;430100&quot;,
&quot;Common Area/Amenities&quot;,&quot;420200&quot;,
&quot;Community Room/Clubhouse&quot;,&quot;420600&quot;,
&quot;Concierge Services&quot;,&quot;545300&quot;,
&quot;Corporate Premium&quot;,&quot;470100&quot;,
&quot;Customer Service Discount&quot;,&quot;545250&quot;,
&quot;Damage Receipts&quot;,&quot;561200&quot;,
&quot;Early Termination&quot;,&quot;420900&quot;,
&quot;Early Termination Rent&quot;,&quot;420900&quot;,
&quot;Electric Reimbursement&quot;,&quot;539200&quot;,
&quot;Electricity&quot;,&quot;530100&quot;,
&quot;Gas&quot;,&quot;530200&quot;,
&quot;Gas/HWE Reimbursement&quot;,&quot;539100&quot;,
&quot;Government License Fee&quot;,&quot;601300&quot;,
&quot;Guest Apartment&quot;,&quot;420700&quot;,
&quot;Hotel Tax&quot;,&quot;205900&quot;,
&quot;Insurance&quot;,&quot;430300&quot;,
&quot;Insurance Reconciliation&quot;,&quot;430300&quot;,
&quot;Key Lock Recurring Chg&quot;,&quot;570800&quot;,
&quot;Late Charges&quot;,&quot;420300&quot;,
&quot;Laundry Fee&quot;,&quot;422100&quot;,
&quot;Lock/Key Charge&quot;,&quot;570800&quot;,
&quot;Mailbox Rental&quot;,&quot;429900&quot;,
&quot;MTM/Short Term Premium&quot;,&quot;421400&quot;,
&quot;MTMR - MTM Rent&quot;,&quot;421400&quot;,
&quot;Non Resident Parking&quot;,&quot;425500&quot;,
&quot;Oil&quot;,&quot;530300&quot;,
&quot;Other Discounts&quot;,&quot;400400&quot;,
&quot;Other Qualified Income&quot;,&quot;424900&quot;,
&quot;Other Utilities&quot;,&quot;539000&quot;,
&quot;Parking Rent&quot;,&quot;421300&quot;,
&quot;Parking Sales Tax&quot;,&quot;790400&quot;,
&quot;Pet Fees Non Refundable&quot;,&quot;220400&quot;,
&quot;Pet Rent&quot;,&quot;420100&quot;,
&quot;RE Tax Pass Through&quot;,&quot;430200&quot;,
&quot;RE Tax Reconciliation&quot;,&quot;430200&quot;,
&quot;Recurring Cable Charge&quot;,&quot;421800&quot;,
&quot;Refrigerator Income&quot;,&quot;421600&quot;,
&quot;Rent Concession&quot;,&quot;400600&quot;,
&quot;Rent Receivable&quot;,&quot;400100&quot;,
&quot;Reservation Charge&quot;,&quot;421000&quot;,
&quot;Resident Referral&quot;,&quot;545500&quot;,
&quot;Returned Check Charge&quot;,&quot;420500&quot;,
&quot;Sewer Charge&quot;,&quot;530500&quot;,
&quot;Short Term Premium&quot;,&quot;421400&quot;,
&quot;Short Term Rent&quot;,&quot;421400&quot;,
&quot;Shuttle Service Fee&quot;,&quot;545700&quot;,
&quot;Storage Rent&quot;,&quot;421200&quot;,
&quot;Tenant Amortization Re&quot;,&quot;158200&quot;,
&quot;Transfer Fees&quot;,&quot;420800&quot;,
&quot;Trash Collections&quot;,&quot;421700&quot;,
&quot;Upgrade Charge&quot;,&quot;429900&quot;,
&quot;Waive Miscellaneous&quot;,&quot;400400&quot;,
&quot;Waive/Late Fee&quot;,&quot;400400&quot;,
&quot;Washer/Dryer&quot;,&quot;421500&quot;,
&quot;Water Sub Metering Reimbursement&quot;,&quot;530500&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Signed_On__c</fullName>
        <label>Lease Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leased_Rent__c</fullName>
        <label>Leased Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Charge_Amount__c</fullName>
        <label>Original Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Credit_Amount__c</fullName>
        <label>Original Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Amount__c</fullName>
        <label>Referral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Issues</relationshipLabel>
        <relationshipName>Referring_Case_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for approval process configuration</description>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reservation_Fee__c</fullName>
        <formula>Leased_Rent__c  *  Days_off_Market_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resident_Referred__c</fullName>
        <label>Resident Referred</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Applicant Remains on Saferent Denial List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Removed from Saferent Denial List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Priority - Relinquish Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed PAF and License Agreement for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Associate Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor Common Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Rent - Re-instate Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Rent - Revocation Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Rent - Revoke Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA - Re-instate Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Documents Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-In Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Common Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF and License Agreement Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF Signed and Returned - Revoke Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_Amount__c</fullName>
        <label>Transfer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Account__c</fullName>
        <label>Transfer From Account #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Account__c</fullName>
        <label>Transfer To Account #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Why_are_We_Adjusting__c</fullName>
        <label>Why are We Adjusting?</label>
        <picklist>
            <picklistValues>
                <fullName>Added Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Signed Application Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Signed Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed After First of Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Incorrect MTM Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcharged Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned Incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate - Applied To Wrong Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident - Applied to Wrong Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Community Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other AVB Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Account Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Eviction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Court Order/Judgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Guarantee-General Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance-MI condition/ Apt not ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-Comments required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking-Towing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rennovation/Construction Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Issue</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Issues</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment_Transfer</fullName>
        <active>true</active>
        <label>Payment Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reservation_Fee</fullName>
        <active>true</active>
        <label>Reservation Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resident_Referral</fullName>
        <active>true</active>
        <label>Resident Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unbilled_Fees</fullName>
        <active>true</active>
        <description>For all issues pertaining to un-billed fees</description>
        <label>Un-billed Fees</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_adjustment_on_Prospect_Acc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	(ISPICKVAL(Customer_Group__r.Status__c, &apos;Prospect&apos;)),
	(Amount__c &gt; 0)
	)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You cannot create an Adjustment on a Prospect Customer Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_negative_numbers</fullName>
        <active>true</active>
        <description>The Amount should always be positive, the Charge/Credit will determine how it is calculated.</description>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount should always be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Amount_is_entered_all_fields_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Transfer_Amount__c )),
  ISBLANK(Date_Deposited__c),
  ISBLANK(Transfer_From_Account__c),
  ISBLANK( Transfer_To_Account__c )  
  )</errorConditionFormula>
        <errorMessage>If Transfer Amount is entered, you must enter a value for Date Deposited, Transfer From Account and Transfer To Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resident_Referral_must_have_Resident</fullName>
        <active>true</active>
        <description>require that a resident referral Case Issue must have a Contact designated as the Referred Resident. JN 080612</description>
        <errorConditionFormula>AND(
  ($RecordType.DeveloperName == &apos;Resident Referral&apos;)/*,
  ( Referred_Resident__c == null)*/)</errorConditionFormula>
        <errorMessage>Please enter Referred Resident Name</errorMessage>
    </validationRules>
</CustomObject>